# nostr-double-ratchet

./: .gitignore  README.md
rust/: Cargo.toml  README.md
rust/crates/ndr-ffi/: V2_PROTOCOL_CLIENT_PLAN.md
rust/crates/ndr-ffi/src/: lib.rs
rust/crates/ndr/tests/: e2e_group_messaging.rs  e2e_invite_publish_fetch.rs
rust/crates/nostr-double-ratchet/: ARCHITECTURE.md  Cargo.toml  README.md  SOURCES.md  TUTORIAL.md
rust/crates/nostr-double-ratchet-nostr/: Cargo.toml  README.md
rust/crates/nostr-double-ratchet-nostr/src/: group_codec.rs  nostr.rs  nostr_codec.rs
rust/crates/nostr-double-ratchet-runtime/: Cargo.toml
rust/crates/nostr-double-ratchet-runtime/src/: direct_message_subscriptions.rs  file_storage.rs  lib.rs  protocol_backfill.rs  runtime.rs  storage.rs
rust/crates/nostr-double-ratchet-runtime/tests/: runtime_effects_crash.proptest-regressions  runtime_effects_crash.rs  runtime_group_local_sibling.rs  runtime_identity_adversarial.rs
rust/crates/nostr-double-ratchet/src/: app_keys.rs  error.rs  group.rs  group_manager.rs  ids.rs  invite.rs  invite_actor.rs  lib.rs  peer_book.rs  session.rs  session_actor.rs  session_manager.rs  state.rs  types.rs  user_record.rs  utils.rs
rust/crates/nostr-double-ratchet/tests/: advanced_test.rs  device_to_device.rs  direct_message_subscriptions_test.rs  group_manager_pairwise_adversarial.rs  group_manager_pairwise_basic.rs  group_manager_sender_key_adversarial.rs  group_manager_sender_key_basic.rs  inner_rumor_id_test.rs  integration_test.rs  interop_test.rs  invite_listen_test.rs  invite_test.rs  out_of_order_test.rs  session_invite_adversarial.rs  session_invite_basic.rs  session_invite_semantics.rs  session_invite_stress.rs  session_manager_multi_device_test.rs  session_manager_restore_adversarial.rs  session_manager_restore_basic.rs  (+4 more)
rust/scripts/: publish.sh
(+31 files in other folders)
