[workspace]
resolver = "2"
members = [
    "crates/nostr-double-ratchet",
]

[workspace.package]
version = "0.0.88"
edition = "2021"
authors = ["Martti Malmi"]
license = "MIT"
repository = "https://github.com/Innode/nostr-double-ratchet"

[workspace.dependencies]
nostr-double-ratchet = { version = "0.0.88", path = "crates/nostr-double-ratchet" }
nostr = { version = "0.37", default-features = false, features = ["std", "nip44"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hkdf = "0.12"
sha2 = "0.10"
hex = { version = "0.4", features = ["serde"] }
thiserror = "2"
base64 = "0.22"
urlencoding = "2.1"
rand = "0.8"
