[package]
name = "nostr-double-ratchet-nostr"
description = "Nostr adapter crate for nostr-double-ratchet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nostr-double-ratchet.workspace = true
nostr.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
base64.workspace = true
urlencoding.workspace = true
thiserror.workspace = true
