[package]
name = "nostr-double-ratchet"
description = "Nostr double ratchet library for Rust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
autotests = false

[dependencies]
nostr.workspace = true
serde.workspace = true
serde_json.workspace = true
hkdf.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
base64.workspace = true
urlencoding.workspace = true
rand.workspace = true
uuid.workspace = true
